--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,8 @@
 body {
-    background: linear-gradient(darkgreen, cyan, black);
-    background-repeat: repeat;
-}
+    background: linear-gradient(359deg,
+        rgba(17, 0, 255, 1) 9%,
+        rgba(33, 97, 181, 1) 34%,
+        rgba(18, 12, 89, 1) 60%,
+        rgba(0, 0, 0, 1) 83%  );
+    background-blend-mode: normal;
+     }
