--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,69 @@
+/* reset css */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    height: 100%;
+  }
+  
+  body {
+    min-height: 100%;
+    line-height: 1;
+    font-family: sans-serif;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-size: 100%;
+  }
+  
+  input, select, option, optgroup, textarea, button,
+  pre, code {
+    font-size: 100%;
+    font-family: inherit;
+  }
+  
+  ol, ul {
+    list-style: none;
+  }
+/* Root variables for the for the css */
+
+  :root {
+    --dark: #13293d;
+    --light: #fff;
+    --navlink-color: #b9c6ae;
+  }
+
+/* CSS for the page */
 body {
     background: linear-gradient(359deg,
         rgba(17, 0, 255, 1) 9%,
         rgba(33, 97, 181, 1) 34%,
         rgba(18, 12, 89, 1) 60%,
         rgba(0, 0, 0, 1) 83%  );
+    background-attachment:fixed;
+    background-origin: initial;
+    background-repeat: no-repeat;
     background-blend-mode: normal;
-     }
+    min-height: 100%;
+     };
+
+
+/* Media Queries */
+@media screen and (max-width: 768px) {
+    header,
+    main {
+      flex-direction: column;
+    }
+  
+    section {
+      padding-right: 0;
+    }
+  
+    aside {
+      width: 100%;
+      text-align: center;
+    }
+  }
