--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
+  <div class="container text-center justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <span role="img" aria-label="mtn">⛰️</span>
@@ -26,7 +26,7 @@
         {{/if}}
       </nav>
     </header>
-    <main class="container container-fluid mt-5">
+    <main class="container text-center container-fluid mt-5">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
