--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,43 +1,6 @@
-/* reset css */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  html {
-    height: 100%;
-  }
-  
-  body {
-    min-height: 100%;
-    line-height: 1;
-    font-family: sans-serif;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    font-size: 100%;
-  }
-  
-  input, select, option, optgroup, textarea, button,
-  pre, code {
-    font-size: 100%;
-    font-family: inherit;
-  }
-  
-  ol, ul {
-    list-style: none;
-  }
-/* Root variables for the for the css */
-
-  :root {
-    --dark: #13293d;
-    --light: #fff;
-    --navlink-color: #b9c6ae;
-  }
-
 /* CSS for the page */
 body {
+    color: white;
     background: linear-gradient(359deg,
         rgba(17, 0, 255, 1) 9%,
         rgba(33, 97, 181, 1) 34%,
@@ -49,8 +12,42 @@ body {
     background-blend-mode: normal;
     min-height: 100%;
      };
+main {
+    margin: 100px;
+}
 
-
+form {
+    margin: 50px;
+}
+#formFont {
+    color: white;
+}
+#buttonFont {
+    color: black;
+}
+.atag {
+   margin: 25px;
+   padding: 25px;
+}
+#goalFormTop {
+    padding-top: 100px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+#goalFormBot {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+footer {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.card {
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+}
 /* Media Queries */
 @media screen and (max-width: 768px) {
     header,
