--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,41 @@
+/* reset css */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    height: 100%;
+  }
+  
+  body {
+    min-height: 100%;
+    line-height: 1;
+    font-family: sans-serif;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-size: 100%;
+  }
+  
+  input, select, option, optgroup, textarea, button,
+  pre, code {
+    font-size: 100%;
+    font-family: inherit;
+  }
+  
+  ol, ul {
+    list-style: none;
+  }
+/* Root variables for the for the css */
+
+  /* :root {
+    --dark: #13293d;
+    --light: #fff;
+    --navlink-color: #b9c6ae;
+  }
+
 /* CSS for the page */
 body {
     color: white;
