--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,41 +5,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lofty Goals</title>
+  <link rel="stylesheet" href="/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="public/css/style.css">
 </head>
 
 <body>
-  <div class="container text-center justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="mtn">⛰️</span>
-        <a href="/">LOFTY</a>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
+  <div>
+      <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">LOFTY
+            <span role="img" aria-label="mtn">⛰️</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                 <!-- Conditionally render login or logout links -->
+                 <!-- {{#if logged_in}} -->
+                <a class="nav-link" href="/profile">Profile</a>
+              </li>
+              <li class="nav-item">
+                <!-- <button class="no-button" id="logout">logout</button> -->
+                <!-- {{else}} -->
+                <a class="nav-link" href="/login">Login</a>
+                 <!-- {{/if}} -->
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-    </header>
-    <main class="container text-center container-fluid mt-5">
-      <!-- Render the sub layout -->
+    </div>
+    <main>
       {{{ body }}}
     </main>
     <footer>
-      
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <button class="btn" style="background-color: #e3f2fd;" type="button">+</button>
+      </div>
     </footer>
   </div>
 
   <!-- Render script for logged in users only -->
-  {{#if logged_in}}
+  {{!-- {{#if logged_in}} --}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="/js/logout.js"></script>
-  {{/if}}
+  {{!-- <script src="/js/logout.js"></script> --}}
+  {{!-- {{/if}} --}}
 </body>
 
 </html>
