--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 
 {{#each goals as |goal| }}
-<div class="card mx-auto" style="width: 18rem; background-color: #CB534F;">
-        <div class="card-body" onclick="generateAttainable()">
+<div class="card mx-auto" style="width: 18rem; background-color: #CB534F;" onclick="generateAttainable()">
+        <div class="card-body">
           <h5 class="card-title">{{lofty-name}}</h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">{{loftyNote}}</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
