--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,11 +4,11 @@
     <form class="form login-form">
       <div class="form-group">
         <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <input class="form-input login-form" type="text" id="email-login" />
       </div>
       <div class="form-group">
         <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input class="form-input login-form" type="password" id="password-login" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
@@ -20,11 +20,11 @@
     <form class="form signup-form">
       <div class="form-group">
         <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input signup-form" type="text" id="email-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input signup-form" type="password" id="password-signup" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
