--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
               <li class="nav-item">
                 <!-- <button class="no-button" id="logout">logout</button> -->
                 <!-- {{else}} -->
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="api/users/login">Login</a>
                  <!-- {{/if}} -->
               </li>
             </ul>
@@ -54,6 +54,7 @@
   {{!-- {{#if logged_in}} --}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   {{!-- <script src="/js/logout.js"></script> --}}
+  <script src="../../public/js/login.js"></script>
   {{!-- {{/if}} --}}
 </body>
 
