--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,7 +54,7 @@
   {{!-- {{#if logged_in}} --}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   {{!-- <script src="/js/logout.js"></script> --}}
-  <script src="../../public/js/login.js"></script>
+  <script src="/js/login.js"></script>
   {{!-- {{/if}} --}}
 </body>
 
