--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,7 +27,7 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Signup</button>
+        <button class="btn btn-primary submit" type="submit">Signup</button>
       </div>
     </form>
   </div>
