--- a/views/lofty.handlebars
+++ b/views/lofty.handlebars
@@ -27,3 +27,9 @@
         </div>
       </div>
 {{/each}}
+
+ <footer>
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <button href="/addGoal" class="btn" style="background-color: #e3f2fd;" type="button">+</button>
+      </div>
+    </footer>
