--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,13 +32,14 @@
               <li class="nav-item">
                 <!-- <button class="no-button" id="logout">logout</button> -->
                 <!-- {{else}} -->
-                <a class="nav-link" href="api/users/login">Login</a>
+                <a class="nav-link" href="api/user/login">Login</a>
                  <!-- {{/if}} -->
               </li>
               <li class="nav-item">
                  <!-- Conditionally render login or logout links -->
                  <!-- {{#if logged_in}} -->
-                <a id="logout" class="nav-link" href="api/users/logout">Logout</a>
+                <a id="logout" class="no-button nav-link">Logout</a>
+                <!-- {{/if}} -->
               </li>
             </ul>
           </div>
@@ -58,7 +59,7 @@
   <!-- Render script for logged in users only -->
   {{!-- {{#if logged_in}} --}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  {{!-- <script src="/js/logout.js"></script> --}}
+  <script src="/js/logout.js"></script>
   {{!-- {{/if}} --}}
 </body>
 
