--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -27,3 +27,15 @@
         </div>
       </div>
 {{/each}}
+
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Add Goal</label>
+  <input type="text" class="form-control" id="addgoal" placeholder="Write the title of your goal here!">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Write some notes about your goal!</label>
+  <textarea class="form-control" id="addgoal" rows="3"></textarea>
+</div>
+<button class="btn" style="background-color: #e3f2fd;" type="button">SAVE</button>
+
+<script src="/js/goal.js"></script>
