--- a/views/lofty.handlebars
+++ b/views/lofty.handlebars
@@ -1,28 +1,9 @@
 
-{{#each goals as |goal| }}
+{{#each loftys as |lofty| }}
 <div class="card mx-auto" style="width: 18rem; background-color: #CB534F;">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Attainable Goals</a>
-        </div>
-      </div>
-
-      <div class="card mx-auto" style="width: 18rem; background-color: #CB534F;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Attainable Goals</a>
-        </div>
-      </div>
-      
-      <div class="card mx-auto" style="width: 18rem; background-color: #CB534F;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">{{lofty.lofty_name}}</h5>
+          <p class="card-text">{{lofty.note}}</p>
           <a href="#" class="card-link">Attainable Goals</a>
         </div>
       </div>
