made it to the attainable part! ?

--- a/views/attainable.handlebars
+++ b/views/attainable.handlebars
@@ -1,47 +1,25 @@
-{{#each goals as |goal| }}
+{{#each attainables as |attainable| }}
 <div class="card mx-auto" style="width: 18rem; background-color: #CB534F;" onclick="generateAttainable()">
         <div class="card-body">
-          <h5 class="card-title">{{lofty-name}}</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">{{loftyNote}}</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Attainable Goals</a>
+          <h5 class="card-title">{{attainable.attainable_name}}</h5>
+          <p class="card-text">{{attainable.note}}</p>
+          <a href="api/attainable/{{attainable.id}}" class="card-link">Tasks to complete {{attainable.attainable_name}}</a>
         </div>
       </div>
-
-<script>
-  function generateAttainable() {
-    const url = '/api/attainable-routes'
-    fetch(url)
-    .then(function(res) {
-        console.log(res.status)
-        return res.json();
-    })
-    .then(function(data) {
-        console.log(data)
-
-        var responseLength = data.response.length
-        for (var i = 1; i < responseLength; i++){
-          var attainableName = data.response[i].attainable_name
-          var attainableNote = data.response[i].note
-          var card = document.createElement('div')
-          list.textContent = `${attainableName} <br> ${attainableNote}`;
-          document.getElementsByClassName('attainable-card').appendChild(card)
-        }
-      }
-    )
-  }
-  
-</script>
 {{/each}}
 
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Add Goal</label>
-  <input type="text" class="form-control" id="addgoal" placeholder="Write the title of your goal here!">
+<div>
+<form class="form new-attainable-form">
+  <div class="mb-3">
+    <label for="attainable_name"class="form-label">Add Goal</label>
+    <input id="attainable_name" type="text" class="form-control" placeholder="Write the title of your goal here!">
+  </div>
+  <div class="mb-3">
+    <label for="note"class="form-label">Write some notes about your goal!</label>
+    <textarea id="note" class="form-control" rows="3"></textarea>
+  </div>
+  <button class="btn" style="background-color: #e3f2fd;" type="submit">SAVE</button>
+</form>
 </div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Write some notes about your goal!</label>
-  <textarea class="form-control" id="addgoal" rows="3"></textarea>
-</div>
-<button class="btn" style="background-color: #e3f2fd;" type="button">SAVE</button>
 
   <script src="/js/goal.js"></script>
