--- a/views/attainable.handlebars
+++ b/views/attainable.handlebars
@@ -1,9 +1,9 @@
 {{#each attainables as |attainable| }}
-<div class="card mx-auto" style="width: 18rem; background-color: #CB534F;" onclick="generateAttainable()">
+<div class="card mx-auto" style="width: 18rem; background-color: #C48F22;">
         <div class="card-body">
           <h5 class="card-title">{{attainable.attainable_name}}</h5>
           <p class="card-text">{{attainable.note}}</p>
-          <a href="api/attainable/{{attainable.id}}" class="card-link">Tasks to complete {{attainable.attainable_name}}</a>
+          <a href="task" class="card-link">Tasks to complete {{attainable.attainable_name}}</a>
         </div>
       </div>
 {{/each}}
@@ -18,8 +18,8 @@
     <label for="note"class="form-label">Write some notes about your goal!</label>
     <textarea id="note" class="form-control" rows="3"></textarea>
   </div>
-  <button class="btn" style="background-color: #e3f2fd;" type="submit">SAVE</button>
+  <button id="attainable-button" class="btn" style="background-color: #e3f2fd;" type="submit">SAVE</button>
 </form>
 </div>
 
-  <script src="/js/goal.js"></script>
+  <script src="/js/attainable.js"></script>
