--- a/views/lofty.handlebars
+++ b/views/lofty.handlebars
@@ -4,7 +4,8 @@
         <div class="card-body">
           <h5 class="card-title">{{lofty.lofty_name}}</h5>
           <p class="card-text">{{lofty.note}}</p>
-          <a href="attainable" class="card-link">Attainable Goals</a>
+          <input type="hidden" id="{{lofty.lofty_name}}" value="{{lofty.id}}">
+          <a href="lofty/{{lofty.id}}" class="card-link">Attainable Goals</a>
         </div>
       </div>
 {{/each}}
