{descriptive: i did the same thing to the tasks documents to make the ids link up. it worked! for the most part.

--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -4,7 +4,7 @@
         <div class="card-body">
           <h5 class="card-title">{{task.task_name}}</h5>
           <p class="card-text">{{task.note}}</p>
-          <a href="task" class="card-link">Tasks to complete {{task.task_name}}</a>
+          <a href="/lofty" class="card-link">Take me home, country road!</a>
         </div>
       </div>
 {{/each}}
