--- a/views/attainable.handlebars
+++ b/views/attainable.handlebars
@@ -3,7 +3,7 @@
         <div class="card-body">
           <h5 class="card-title">{{attainable.attainable_name}}</h5>
           <p class="card-text">{{attainable.note}}</p>
-          <a href="task" class="card-link">Tasks to complete {{attainable.attainable_name}}</a>
+          <a href="/attainable/{{attainable.id}}" class="card-link">Tasks to complete {{attainable.attainable_name}}</a>
         </div>
       </div>
 {{/each}}
