--- a/views/lofty.handlebars
+++ b/views/lofty.handlebars
@@ -1,6 +1,6 @@
 
 {{#each loftys as |lofty| }}
-<div class="card mx-auto" style="width: 18rem; background-color: #CB534F;">
+<div class="card mx-auto animate__animated animate__fadeInLeftBig" style="width: 18rem; background-color: #CB534F;">
         <div class="card-body">
           <h5 class="card-title">  {{lofty.lofty_name}}</h5>
           <p class="card-text">{{lofty.note}}</p>
