--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -1,7 +1,7 @@
 
 {{#each tasks as |task| }}
 <div class="card mx-auto" style="width: 18rem; background-color: #53A586;">
-        <div class="card-body">
+        <div class="card-body animate__animated animate__fadeInLeftBig">
           <h5 class="card-title">{{task.task_name}}</h5>
           <p class="card-text">{{task.note}}</p>
           <a href="/lofty" class="card-link">Take me home, country road!</a>
