--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
 /* reset css */
 * {
     margin: 0;
@@ -37,23 +38,39 @@
   }
 
 /* CSS for the page */
+
+
 body {
     color: white;
-    background: linear-gradient(359deg,
-        rgba(17, 0, 255, 1) 9%,
-        rgba(33, 97, 181, 1) 34%,
-        rgba(18, 12, 89, 1) 60%,
-        rgba(0, 0, 0, 1) 83%  );
-    background-attachment:fixed;
     background-origin: initial;
     background-repeat: no-repeat;
     background-blend-mode: normal;
     min-height: 100%;
+    flex: auto;
+    background-image:
+      url("../assets/aldebaran-s-qtRF_RxCAo0-unsplash.jpg");
+    background-size:cover;
+          -webkit-animation: slidein 100s;
+          animation: slidein 100s;
+  
+          -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  
+          -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  
+          -webkit-animation-direction: alternate;
+          animation-direction: alternate;             
      };
+
 main {
     margin: 100px;
 }
 
+.login-text{
+  font-weight: bolder;
+  color: white;
+}
 form {
     margin: 50px;
 }
@@ -85,15 +102,16 @@ footer {
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 20px;
+
 }
 
 .card-title {
-  background-color: aliceblue;
+  background-color: rgba(240, 248, 255, .7);
   border-radius: 5px;
 }
 
 .card-text {
-  background-color: aliceblue;
+  background-color: rgba(240, 248, 255, .7);
   border-radius: 5px;
 }
 
@@ -108,6 +126,18 @@ footer {
   color: #53A586;;
   border-radius: 5px;
 }
+@-webkit-keyframes slidein {
+  from {background-position: top; background-size:3000px; }
+  to {background-position: -100px 0px;background-size:2750px;}
+  }
+  
+  @keyframes slidein {
+  from {background-position: top;background-size:3000px; }
+  to {background-position: -100px 0px;background-size:2750px;}
+  
+  }
+  
+  
 /* Media Queries */
 @media screen and (max-width: 768px) {
     header,
