--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,33 @@
 <div class="row">
   <div class="col-md-6">
-    <h2>Login</h2>
+    <h2 class="login-text">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Email:</label>
+        <label for="email-login" class="login-text">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">Password:</label>
+        <label for="password-login" class="login-text">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login</button>
+        <button class="btn btn-primary" type="submit" style="background-color: goldenrod; border-color: rgb(169, 129, 26)">Login</button>
       </div>
     </form>
   </div>
   <div class="col-md-6">
-    <h2>Signup</h2>
+    <h2 class="login-text">Signup</h2>
     <form class="form signup-form">
       <div class="form-group">
-        <label for="email-signup">email:</label>
+        <label for="email-signup" class="login-text">Email:</label>
         <input class="form-input " type="text" id="email-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">Password:</label>
+        <label for="password-signup" class="login-text">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary submit" type="submit">Signup</button>
+        <button class="btn btn-primary submit" type="submit" style="background-color: goldenrod; border-color: rgb(169, 129, 26)">Signup</button>
       </div>
     </form>
   </div>
