--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -1,6 +1,6 @@
 
 {{#each tasks as |task| }}
-<div class="card mx-auto animate__animated animate__fadeInLeftBig" style="width: 18rem; background-color: #53A586;">
+<div class="card mx-auto animate__animated animate__fadeInLeftBig" style="width: 18rem; background-color: rgba(83, 165, 134, .7);">
         <div class="card-body">
           <h5 class="card-title">{{task.task_name}}</h5>
           <p class="card-text">{{task.note}}</p>
@@ -9,14 +9,14 @@
       </div>
 {{/each}}
 
-<div>
+<div class="animate__animated animate__fadeInUp animate__delay-1s">
 <form class="form new-task-form" >
   <div class="mb-3">
-    <label for="task_name"class="form-label">Add Goal</label>
+    <label for="task_name"class="form-label login-text animate__animated animate__fadeInUp animate__delay-1s">Add Goal</label>
     <input id="task_name" type="text" class="form-control" placeholder="Write the title of your goal here!">
   </div>
   <div class="mb-3">
-    <label for="note"class="form-label">Write some notes about your goal!</label>
+    <label for="note"class="form-label login-text animate__animated animate__fadeInUp animate__delay-1s">Write some notes about your goal!</label>
     <textarea id="note" class="form-control" rows="3"></textarea>
   </div>
   <button id="task-button" class="btn" style="background-color: #e3f2fd;" type="submit" onclick="setTimeout(function(){window.location.reload();},10);">SAVE</button>
