fixed the bug!!! going to see what else i can get done today but this is MVP. no more broken links. the issue was lofty/{{id}} needed to be /lofty/{{id}} to make it an absolute path instead. additionally the same with the attainable to task => made it /attainable/{{attainable.id}}.

--- a/views/lofty.handlebars
+++ b/views/lofty.handlebars
@@ -5,7 +5,7 @@
           <h5 class="card-title">  {{lofty.lofty_name}}</h5>
           <p class="card-text">{{lofty.note}}</p>
           <input type="hidden" id="{{lofty.lofty_name}}" value="{{lofty.id}}">
-          <a href="lofty/{{lofty.id}}" class="attainable-card-link">Attainable Goals</a>
+          <a href="/lofty/{{lofty.id}}" class="attainable-card-link">Attainable Goals</a>
         </div>
       </div>
 {{/each}}
