--- a/views/attainable.handlebars
+++ b/views/attainable.handlebars
@@ -4,7 +4,7 @@
           <h5 class="card-title">{{attainable.attainable_name}}</h5>
           <p class="card-text">{{attainable.note}}</p>
           <input type="hidden" id="{{attainable.attainable_name}}" value="{{lofty.id}}">
-          <a href="attainable/{{attainable.id}}" class="task-card-link">Tasks to complete</a>
+          <a href="/attainable/{{attainable.id}}" class="task-card-link">Tasks to complete</a>
         </div>
       </div>
 {{/each}}
