--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ body {
     min-height: 100%;
     flex: auto;
     background-image:
-      url("../assets/aldebaran-s-qtRF_RxCAo0-unsplash.jpg");
+      url("../assets/pillars-of-creation-james-webb-21-9-5974x2560-v0-tl4zsrio9wu91.png");
     background-size:cover;
           -webkit-animation: slidein 100s;
           animation: slidein 100s;
@@ -66,6 +66,21 @@ body {
 main {
     margin: 100px;
 }
+#loftyTitleText {
+  font-size: 1.5em;           
+  color: white;            
+  text-shadow:               
+    -1px -1px 0 black,  
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black;
+  /* margin-bottom: 15px; */
+  padding: 15px 0;   
+}
+.navbarCustom {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.1); /* Slight white border at the bottom */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
 .login-text{
   font-weight: bolder;
@@ -74,6 +89,18 @@ main {
 form {
     margin: 50px;
 }
+
+.formTitle {
+  font-size: 2.5em;           
+  color: white;               
+  text-shadow:               
+    -1px -1px 0 black,  
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black;
+  margin-bottom: 20px;       
+}
+
 #formFont {
     color: white;
 }
@@ -88,6 +115,7 @@ form {
     padding-top: 100px;
     padding-left: 25px;
     padding-right: 25px;
+    background-color: grey;
 }
 #goalFormBot {
     padding-left: 25px;
@@ -108,24 +136,31 @@ footer {
 .card-title {
   background-color: rgba(240, 248, 255, .7);
   border-radius: 5px;
+  padding: 10px 15px;  
 }
 
 .card-text {
   background-color: rgba(240, 248, 255, .7);
   border-radius: 5px;
+  padding: 10px 15px;  
 }
+
 
 .attainable-card-link {
   font-weight: bolder;
-  color: #C48F22;
+  color: #0b4e7e;
   border-radius: 5px;
+  text-decoration: underline;
 }
 
 .task-card-link {
   font-weight: bolder;
-  color: #53A586;;
+  color: #0b4e7e;
   border-radius: 5px;
+  text-decoration: underline;
 }
+
+
 @-webkit-keyframes slidein {
   from {background-position: top; background-size:3000px; }
   to {background-position: -100px 0px;background-size:2750px;}
