--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,61 +2,41 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lofty Goals</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-   <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lofty Goals</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 
 <body>
-  <div>
-      <nav class="navbar navbar-expand-lg" style="background-color: #ab864a;">
+    <nav class="navbar navbar-expand-lg navbar-dark navbarCustom" style="background-color: #6d07a0;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">LOFTY
-            <span role="img" aria-label="mtn">⛰️</span>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-
-              
-              <li class="nav-item">
-                 <!-- Conditionally render login or logout links -->
-                 <!-- {{#if logged_in}} -->
-                <a id="logout" class="no-button nav-link">Logout</a>
-                <!-- {{/if}} -->
-              </li>
-            </ul>
-          </div>
+            <a id="loftyTitleText" class="navbar-brand" href="/">LOFTY <span role="img" aria-label="vroom">🚀</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <!-- Conditionally render login or logout links -->
+                    <!-- {{#if logged_in}} -->
+                    <li class="nav-item">
+                        <a id="logout" class="nav-link">Logout</a>
+                    </li>
+                    <!-- {{/if}} -->
+                </ul>
+            </div>
         </div>
-      </nav>
-    </div>
+    </nav>
+
     <main>
-      {{{ body }}}
+        {{{body}}}
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="/js/logout.js"></script>
 
-  <!-- Render script for logged in users only -->
-  {{!-- {{#if logged_in}} --}}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="/js/logout.js"></script>
-  <script>
-    function remove(el) {
-      var element = el;
-      element.parentNode.parentNode.remove();
-    };
-  </script>
-  {{!-- {{/if}} --}}
 </body>
 
 </html>
