--- a/views/lofty.handlebars
+++ b/views/lofty.handlebars
@@ -1,29 +1,51 @@
-
-{{#each loftys as |lofty| }}
-<div class="card mx-auto animate__animated animate__fadeInLeftBig" style="width: 18rem; background-color: rgba(203, 83, 79, .7);">
-        <div class="card-body">
-          <h5 class="card-title">  {{lofty.lofty_name}}</h5>
-          <p class="card-text">{{lofty.note}}</p>
-          <input type="hidden" id="{{lofty.lofty_name}}" value="{{lofty.id}}">
-          <a href="/lofty/{{lofty.id}}" class="attainable-card-link">Attainable Goals</a>
-        </div>
-      </div>
+<div class="row">
+  <div class= "col-md-4 ps-4 ">
+{{#each loftys as |lofty|}}
+  <div
+    class="card mx-auto animate__animated animate__fadeInLeftBig"
+    style="width: 18rem; background-color: rgba(53, 140, 215, 0.843);"
+  >
+    <div class="card-body">
+      <h5 class="card-title"> Lofty ~ {{lofty.lofty_name}}</h5>
+      <p class="card-text">{{lofty.note}}</p>
+      <a href="/lofty/{{lofty.id}}" class="attainable-card-link">Attainable
+        Goals to help me get to this Lofty goal</a>
+    </div>
+  </div>
 {{/each}}
-<div>
-<form  class="form new-lofty-form">
-  <div class="mb-3">
-    <label for="lofty_name"class="form-label login-text">Add Goal</label>
-    <input id="lofty_name" type="text" class="form-control" placeholder="Write the title of your goal here!">
-  </div>
-  <div class="mb-3">
-    <label for="note"class="form-label login-text" >Write some notes about your goal!</label>
-    <textarea id="note" class="form-control" rows="3"></textarea>
-  </div>
-  <button class="btn" style="background-color: #e3f2fd;" type="submit" onclick="setTimeout(function(){window.location.reload();},10);">SAVE</button>
-</form>
+ </div>
+<div class=" col-md-8 animate__animated animate__fadeInUp">
+  <form class="form new-lofty-form">
+    <div class="mb-3 animate__animated animate__fadeInUp">
+      <label 
+      for="lofty_name"
+      class="form-label login-text animate__animated animate__fadeInUp"
+      >Add Goal</label>
+      <input
+        id="lofty_name"
+        type="text"
+        class="form-control"
+        placeholder="Write your Lofty goal here!"
+      />
+    </div>
+    <div class="mb-3 animate__animated animate__fadeInUp ">
+      <label 
+      for="note" 
+      class="form-label login-text animate__animated animate__fadeInUp"
+      >Write some notes about your Goal!</label>
+      <textarea id="note" class="form-control" rows="3"></textarea>
+    </div>
+    <button
+      class="btn"
+      style="background-color: #e3f2fd;"
+      type="submit"
+      onclick="setTimeout(function(){window.location.reload();},10);"
+    >SAVE</button>
+  </form>
+</div>
 </div>
 
- <footer>
-  </footer>
+{{!-- <footer>
+</footer> --}}
 
-  <script src="/js/goal.js"></script>
+<script src="/js/goal.js"></script>
