--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -1,26 +1,49 @@
-
-{{#each tasks as |task| }}
-<div class="card mx-auto animate__animated animate__fadeInLeftBig" style="width: 18rem; background-color: rgba(83, 165, 134, .7);">
+<div class="row">
+  <div class="col-md-4 ps-4">
+    {{#each tasks as |task|}}
+      <div
+        class="card mx-auto animate__animated animate__fadeInLeftBig"
+        style="width: 18rem; background-color: rgba(213, 227, 17, 0.887);"
+      >
         <div class="card-body">
-          <h5 class="card-title">{{task.task_name}}</h5>
+          <h5 class="card-title">Task ~ {{task.task_name}}</h5>
           <p class="card-text">{{task.note}}</p>
-          <a href="/lofty" class="card-link">Take me home, country road!</a>
+          <a href="/lofty" class="card-link task-card-link">Take Me Home, Country Road!</a>
         </div>
       </div>
-{{/each}}
+    {{/each}}
+  </div>
 
-<div class="animate__animated animate__fadeInUp animate__delay-1s">
-<form class="form new-task-form" >
-  <div class="mb-3">
-    <label for="task_name"class="form-label login-text animate__animated animate__fadeInUp animate__delay-1s">Add Goal</label>
-    <input id="task_name" type="text" class="form-control" placeholder="Write the title of your goal here!">
+  <div class="col-md-8 animate__animated animate__fadeInUp">
+    <form class="form new-task-form">
+      <div class="mb-3">
+        <label
+          for="task_name"
+          class="form-label login-text animate__animated animate__fadeInUp"
+        >Add Goal</label>
+        <input
+          id="task_name"
+          type="text"
+          class="form-control"
+          placeholder="Write your Task here!"
+        />
+      </div>
+      <div class="mb-3">
+        <label
+          for="note"
+          class="form-label login-text animate__animated animate__fadeInUp"
+        >Write some notes about your Task!</label>
+        <textarea id="note" class="form-control" rows="3"></textarea>
+      </div>
+      <button
+        id="task-button"
+        class="btn"
+        style="background-color: #e3f2fd;"
+        type="submit"
+        onclick="setTimeout(function(){window.location.reload();},10);"
+      >SAVE</button>
+    </form>
   </div>
-  <div class="mb-3">
-    <label for="note"class="form-label login-text animate__animated animate__fadeInUp animate__delay-1s">Write some notes about your goal!</label>
-    <textarea id="note" class="form-control" rows="3"></textarea>
-  </div>
-  <button id="task-button" class="btn" style="background-color: #e3f2fd;" type="submit" onclick="setTimeout(function(){window.location.reload();},10);">SAVE</button>
-</form>
 </div>
 
-  <script src="/js/tasks.js"></script>
+<script src="/js/tasks.js"></script>
